# xviewmap

./: CMakeLists.txt  README.md
include/: position.hpp  xviewmap.hpp
src/: core.cpp  main.cpp  toml.cpp
